fix(warnings,packaging): deprecated APIs, annotation noise, release assets
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>