@@ -15,6 +15,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.List;
@@ -51,7 +52,7 @@ public class MaterialAllData extends MaterialData {
         MaterialAllData matData = null;
 
         try {
-            URL url = new URL(MaterialsAPI.MATERIALS_API_URL + matID + MATERIALS_API_VASP);
+            URL url = URI.create(MaterialsAPI.MATERIALS_API_URL + matID + MATERIALS_API_VASP).toURL();
             URLConnection urlConnection = url.openConnection();
             if (urlConnection == null) {
                 throw new IOException("urlConnection is null.");
